[package]
name = "ether"
version = "0.0.1"
authors = ["Tom Schroeder <j.tom.schroeder@gmail.com>"]

exclude = ["etc/*"]

description = "Library for parsing and manipulating network data, packet captures."

# documentation = "..."
homepage = "https://github.com/jtomschroeder/ether"
repository = "https://github.com/jtomschroeder/ether"

readme = "README.md"

keywords = ["networking", "pcap"]

license = "MIT"
license-file = "LICENSE"

[dependencies]
num = "0.1"
libc = "0.2"
glob = "0.2"
futures = "0.1"
nom = "2.0"
