[package]
name = "ether"
version = "0.0.2"
authors = ["Tom Schroeder <j.tom.schroeder@gmail.com>"]
description = "Library for parsing and manipulating network data, packet captures."

exclude = ["etc/*"]

documentation = "http://docs.rs/ether"
homepage = "https://github.com/jtomschroeder/ether"
repository = "https://github.com/jtomschroeder/ether"

readme = "README.md"
license = "MIT"
keywords = ["networking", "pcap"]

[dependencies]
num = "0.1"
libc = "0.2"
glob = "0.2"
futures = "0.1"
nom = "2.0"
itertools = "0.5.9"
nix = { git = "https://github.com/nix-rust/nix", rev = "d4ba02f" }
